[package]
name = "zenoh-p2p-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-std = { version = "1.9.0", features = ["attributes"]}
collected = "0.4.0"
futures = "0.3.19"
itertools = "0.10.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version="1.0.132", features=["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", rev = "3a8c8cd1ad202f9f388397a6f8abd39ab3bd03bd" }
